Fix text overflow issues on godfather page

--- a/core/static/user/user_godfathers.scss
+++ b/core/static/user/user_godfathers.scss
@@ -48,6 +48,7 @@
           flex-direction: row;
           justify-content: flex-start;
           align-items: flex-start;
+          max-height: 65px;
         }
     
         > span {
@@ -73,11 +74,19 @@
           }
         }
     
-        >em {
+        > em {
+          box-sizing: border-box;
+          padding: 0 5px;
           text-align: center;
+          max-width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           @media (max-width: 375px) {
             margin-top: 10px;
+            text-align: left;
+            max-width: none;
+            width: 100%;
           }
         }
       }
